# cursor-rules-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/rules/: rust-docs.mdc  rust-general.mdc  rust-linting.mdc  rust-style.mdc
.github/workflows/: ci-local.yml  ci.yml  release.yml
_docs/: cursor-rules-cli-rewrite.md
docs/: cursor-rules-cli-design.md  cursor-rules-repository-structure-guide.md
docs/tasks/: README.md  fr1-repo-discovery.md  fr2-interactive-browser.md  fr3-quick-add-support.md  fr4-config-auth.md  fr5-copy-semantics.md  fr6-offline-cache.md  fr7-telemetry.md  fr7-ui-cleanup.md  fr8-ui-cleanup.md  qa-ci-testing-release.md  v02-auth-token.md
src/: config.rs  copier.rs  main.rs
src/github/: cache.rs  manifests.rs  mod.rs  repo_locator.rs  tree.rs
src/ui/: inputs.rs  mod.rs  prompts.rs  theme.rs  viewport.rs
tests/: browser_basic.rs
