[package]
name = "cursor-rules"
version = "0.1.2"
edition = "2021"
authors = ["Tyler Kozlowski <tkoz.dev@gmail.com>"]
description = "A CLI tool for managing Cursor rules from GitHub repositories"
readme = "README.md"
homepage = "https://github.com/tkozzer/cursor-rules-cli"
repository = "https://github.com/tkozzer/cursor-rules-cli"
license = "MIT"
keywords = ["cli", "cursor", "rules", "github", "development"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/*",
    ".cursor/*",
    ".git/*",
    "*.md",
    "!README.md"
]

[[bin]]
name = "cursor-rules"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
http = "1.3.1"
inquire = "0.7.5"
octocrab = "0.44.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"

[dev-dependencies]
dirs = "6.0.0"
libc = "0.2.173"
mockito = "1.7.0"
serial_test = "3.2.0"
tempfile = "3.20.0"
