[package]
name = "cursor-rules"
version = "0.1.6"
edition = "2021"
rust-version = "1.82.0"
authors = ["Tyler Kozlowski <tkoz.dev@gmail.com>"]
description = "A CLI tool for managing Cursor rules from GitHub repositories"
readme = "README.md"
homepage = "https://github.com/tkozzer/cursor-rules-cli"
repository = "https://github.com/tkozzer/cursor-rules-cli"
license = "MIT"
keywords = ["cli", "cursor", "rules", "github", "development"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/*",
    ".cursor/*",
    ".git/*",
    "*.md",
    "!README.md"
]

[[bin]]
name = "cursor-rules"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
is-terminal = "0.4.16"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
http = "1.3.1"
indicatif = "0.17.11"
inquire = "0.7.5"
octocrab = "0.44.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.11.1"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
keyring = "3.6.2"
toml = "0.8.23"
tempfile = "3.20.0"
fs2 = "0.4.3"
sha1 = "0.10.6"
chrono = "0.4.41"

[dev-dependencies]
assert_cmd = "2.0.17"
dirs = "6.0.0"
expectrl = "0.7.1"
libc = "0.2.173"
mockito = "1.7.0"
serial_test = "3.2.0"
tempfile = "3.20.0"
